--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -29,6 +29,7 @@
 @import url("components/chart.css");
 @import url("components/feature-card.css");
 @import url("components/section-divider.css");
+@import url("components/gradient-breaker.css");
 @import url("components/alert.css");
 @import url("components/spinner.css");
 @import url("components/skeleton.css");
