--- a/static/styles/blocks/calculator.css
+++ b/static/styles/blocks/calculator.css
@@ -616,6 +616,7 @@
 .loan-calculator__slider-wrapper {
   display: flex;
   flex-direction: column;
+  gap: 0.75rem;
 }
 
 .loan-calculator__results {
@@ -694,7 +695,7 @@
 .form-group__checkbox {
   display: inline-flex;
   align-items: center;
-  gap: 6px;
+  gap: 10px;
   cursor: pointer;
   user-select: none;
 }
