Add mortgage and SME loan product pages and update navigation
Introduces new product pages for mortgage (Hypothek), SME loan (KmuKredit), and personal loan, with localized content in German, English, and French. Updates navigation and footer links to use new routes and product names. Refactors LogoBar to use press images instead of inline SVGs. Adds new route files for product application pages in multiple languages and updates related CSS for new product pages and components.

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -39,6 +39,7 @@
 /* Pages */
 @import url("pages/styleguide.css");
 @import url("pages/error.css");
+@import url("pages/product.css");
 
 /* Blocks */
 @import url("blocks/hero.css");
