--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -40,6 +40,7 @@
 @import url("pages/styleguide.css");
 @import url("pages/error.css");
 @import url("pages/product.css");
+@import url("pages/legal.css");
 
 /* Blocks */
 @import url("blocks/hero.css");
