Refactor blog page styles and add blog block CSS
Refactored Blog.tsx to use BEM-style class names for blog components and extracted related styles into a new static/styles/blocks/blog.css file. Updated global.css to support the new structure. This improves maintainability and modularity of blog-related styles.

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -58,6 +58,7 @@
 @import url("blocks/benefits.css");
 @import url("blocks/requirements.css");
 @import url("blocks/faq.css");
+@import url("blocks/blog.css");
 
 /* Responsive */
 @import url("responsive.css");
